Fix perfect scrollbar for editor console

--- a/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/console.css
+++ b/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/console.css
@@ -11,8 +11,10 @@
 }
 
 .output-console-content-default {
-    padding: 10px 10px 10px 35px;
+    padding: 10px 10px 10px 0px;
+    margin-left: 35px;
     height: calc(100% - 26px);
+    width: calc(100% - 35px) !important;
 }
 
 .output-console-content .INFO { color: #03a9f4; }
@@ -172,7 +174,7 @@
 
 .output-console-content-wrapper {
     margin-bottom: 10px;
-    height: 100%;
+    height: calc(100% - 20px);
     border-top: 3px solid #424242;
 }
 
