--- a/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/design-view.css
+++ b/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/design-view.css
@@ -1236,9 +1236,6 @@ a.list-group-item, button.list-group-item {
 	height: 53px;
 }
 
-.output-console-content-wrapper {
-	padding-bottom: 75px;
-}
 
 .define-predefined-annotations .sub-annotation  {
 	margin-left: 20px;
